[gd_scene load_steps=3 format=3 uid="uid://c8x5w0h3q7r2k"]

[ext_resource type="Script" uid="uid://q3bht4i775ef" path="res://UI/OptionsMenu.gd" id="1_m5l4k"]
[ext_resource type="FontFile" uid="uid://ddo7ybrfl5d2s" path="res://fonts/FUSION-PIXEL-12PX-MONOSPACED-ZH_HANS.OTF" id="2_font"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_m5l4k")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -280.0
offset_right = 100.0
offset_bottom = -230.0
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "选项设置"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -160.0
offset_right = 120.0
offset_bottom = -60.0

[node name="LanguageButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "语言: 中文"

[node name="FullscreenButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "窗口模式: 窗口化"

[node name="ResolutionButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "分辨率: 小 (800x600)"

[node name="MusicVolumeLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "音乐音量: 80%"

[node name="MusicVolumeSlider" type="HSlider" parent="VBox"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
step = 1.0
value = 80.0

[node name="SFXVolumeLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "音效音量: 80%"

[node name="SFXVolumeSlider" type="HSlider" parent="VBox"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
step = 1.0
value = 80.0

[node name="OnlineModeButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "联网模式: 离线"

[node name="BackButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "返回"

[node name="InfoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 280.0
modulate = Color(1, 1, 1, 0.9)

[node name="VBox" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="InfoTitle" type="Label" parent="InfoPanel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "游戏信息"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="InfoPanel/VBox"]
layout_mode = 2

[node name="VersionLabel" type="Label" parent="InfoPanel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "版本 Alpha 0.0.2"

[node name="AuthorLabel" type="Label" parent="InfoPanel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "作者: GitHub Copilot"

[node name="Separator2" type="HSeparator" parent="InfoPanel/VBox"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="InfoPanel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "经典俄罗斯方块游戏
支持歌词显示功能"

[node name="Separator3" type="HSeparator" parent="InfoPanel/VBox"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="InfoPanel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "← → 移动方块
↑ 旋转方块
↓ 快速下降
ESC 暂停/菜单"

[node name="Separator4" type="HSeparator" parent="InfoPanel/VBox"]
layout_mode = 2

[node name="DisclaimerLabel" type="Label" parent="InfoPanel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 10
text = "免责声明：
本游戏仅供娱乐使用。歌曲模式中的音乐和歌词
文件版权归各自原作者所有。"
autowrap_mode = 3
